phase2/openshift/service.yaml
apiVersion: v1
kind: Service
metadata: {name: __APPLICATION_NAME__}
spec:
  selector: {app: __APPLICATION_NAME__}
  ports:
  - {name: http, port: 8080, targetPort: http}
